Fixed small overflow issue

--- a/src/scss/characters.scss
+++ b/src/scss/characters.scss
@@ -27,7 +27,7 @@
             }
 
             > .list {
-                height: calc(100% - 112px);
+                height: calc(100% - 113px);
                 overflow: auto;
 
                 &::-webkit-scrollbar {
